# src/Bouvet.AssetHub.Contracts/Dtos/CreateAssetDto.cs
@@ -1,4 +1,4 @@
 ﻿namespace Bouvet.AssetHub.Contracts.Dtos
 {
-    public record CreateAssetDto(int SerialNumber, int CategoryId);
+    public record CreateAssetDto(int SerialNumber, int CategoryId, Guid QrIdentifier);
 }
